Almost finished semester

--- a/ProgramasClases/tarea12mayo.ipynb
+++ b/ProgramasClases/tarea12mayo.ipynb
@@ -51,18 +51,12 @@
    "metadata": {},
    "source": [
     "4. (R\\*\\*-1)\\*\\*-1 = R (la inversa de la inversa es la original)\n",
-    "$$ (R^{-1})^{-1} \\\\\n",
-    "    = (\\frac{1}{R})^{-1} \\\\ \n",
-    "    = R\n",
+    "$$ (x,y) xRy = R \\\\\n",
+    "    R^{-1} = (y,x) yRx \\texttt{  dándole la vuelta} \\\\\n",
+    "    (R^{-1})^{-1} = (x,y) xRy = R \\\\\n",
     "$$\n",
     "\n",
-    "o también se puede hacer\n",
-    "$$ (R^{-1})^{-1} \\\\\n",
-    "    R^{-1 * -1} \\\\\n",
-    "    R^{1} \\\\\n",
-    "    R\n",
-    "\n",
-    "$$"
+    "O es como hacer la transpueta de la matriz de R dos veces que da lo original, porque $M_{R^{-1}} = (M_R)^t$"
    ]
   },
   {
@@ -78,7 +72,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy\n"
+    "import numpy as np\n",
+    "\n",
+    "a,b,c,d = [*tuple('abcd')]\n",
+    "\n",
+    "# R = something\n"
    ]
   },
   {
